# TradeWithShort

./: WSL_SETUP_GUIDE.md  accounts.py  accounts_client.py  app.py  market_server.py  mcp_params.py  push_server.py  pyproject.toml  readMe.md  reset.py  templates.py  tracers.py  traders.py  trading_floor.py  util.py
trading_with_short/: __init__.py
